# NexTOR_IP_CHANGER

./: .git-buildpackagerc  .gitlab-ci.yml  BUILD_INSTRUCTIONS.md  COMPLETE_PACKAGING_GUIDE.md  DEBIAN_PACKAGING.md  KALI_SUBMISSION.md  KALI_SUBMISSION_CHECKLIST.md  LICENSE  MANIFEST.in  PKGBUILD  QUICK_REFERENCE.md  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
Nex_Tor_IP_changer/: .SRCINFO  NexTOR.py  PKGBUILD  README.md  __init__.py  install.py  nex.py
debian/: README.Debian  changelog  control  copyright  install  nextor.1  rules
