[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nextor"
version = "1.1"
description = "Tor exit node IP address rotator for privacy and security testing"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Stalin", email = "stalin@example.com"}
]
keywords = ["tor", "ip-rotation", "privacy", "security", "anonymity", "networking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "requests[socks]>=2.22.0",
    "stem>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/Stalin-143/NexTOR_IP_CHANGER"
Repository = "https://github.com/Stalin-143/NexTOR_IP_CHANGER.git"
Issues = "https://github.com/Stalin-143/NexTOR_IP_CHANGER/issues"

[project.scripts]
nextor = "Nex_Tor_IP_changer.NexTOR:main"

[tool.setuptools]
packages = ["Nex_Tor_IP_changer"]

[tool.setuptools.package-data]
Nex_Tor_IP_changer = ["*.py"]
